// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField renders correctly when untouched 1`] = `
<div
  class="form-group"
>
  <label
    class=""
    for="customOption"
  />
  <input
    class="form-control"
    name="customOption"
    type="text"
  />
</div>
`;

exports[`FormField renders correctly when valid 1`] = `
<div
  class="form-group"
>
  <label
    class=""
    for="field"
  />
  <input
    class="is-valid form-control"
    name="field"
    type="text"
  />
</div>
`;
